--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
       <div class="cta-row">
         <!-- download buttons use data attrs and JS will set final href depending on device -->
-        <a class="btn download-btn" data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store" id="hero-download">⬇ Download App</a>
+        <a class="btn download-btn" data-local="./sky_matka.apk" id="hero-download">⬇ Download App</a>
 
         <a class="btn secondary" href="#contact">📞 Contact Us</a>
 
         <!-- WhatsApp: direct wa.me -->
-        <a class="btn whatsapp" href="https://wa.me/9950568613" rel="noopener" id="hero-whatsapp">
+        <a class="btn whatsapp" href="https://wa.me/9376462470" rel="noopener" id="hero-whatsapp">
           <img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true"> WhatsApp
         </a>
       </div>
@@ -152,7 +152,7 @@
       <div class="big-cta">
         <a class="btn download-btn" data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store">⬇ Download Now</a>
         <a class="btn secondary" href="#contact">📞 Contact Us</a>
-        <a class="btn ghost whatsapp" href="https://wa.me/9950568613"><img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true"> WhatsApp</a>
+        <a class="btn ghost whatsapp" href="https://wa.me/9376462470"><img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true"> WhatsApp</a>
       </div>
     </div>
   </section>
@@ -164,8 +164,8 @@
       <div class="subtitle">Reach us directly</div>
 
       <div style="max-width:720px;margin:0 auto;text-align:center">
-        <p class="muted">Phone: <a href="tel:9950568613" class="link-phone">9950568613</a></p>
-        <p class="muted">WhatsApp: <a href="https://wa.me/9950568613" target="_blank" rel="noopener" class="link-whatsapp">Chat on WhatsApp</a></p>
+        <p class="muted">Phone: <a href="tel:9376462470" class="link-phone">9376462470</a></p>
+        <p class="muted">WhatsApp: <a href="https://wa.me/9376462470" target="_blank" rel="noopener" class="link-whatsapp">Chat on WhatsApp</a></p>
       </div>
     </div>
   </section>
