--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sky Matka Group — Play & Win</title>
 
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -28,7 +31,7 @@
 
       <div>
         <div class="bonus-pill">
-          <div style="font-size:14px">50 ₹</div>
+          <div style="font-size:30px; font-style:italic; padding-left: 15px; padding-right: 15px; color:rgb(7, 29, 88)">50 ₹</div>
           <div class="amount">Welcome Bonus</div>
           <div class="muted" style="font-size:14px">On your first deposit</div>
         </div>
@@ -36,13 +39,15 @@
 
       <div class="cta-row">
         <!-- download buttons use data attrs and JS will set final href depending on device -->
-        <a class="btn download-btn" data-local="./sky_matka.apk" id="hero-download">⬇ Download App</a>
+        
 
         <a class="btn secondary" href="#contact">📞 Contact Us</a>
 
+        <a class="btn download-btn"style="font-size:25px;" data-local="./sky_matka.apk" id="hero-download"><img src="download.png" alt="download" width="40" height="40">        Download App</a>
+
         <!-- WhatsApp: direct wa.me -->
         <a class="btn whatsapp" href="https://wa.me/9376462470" rel="noopener" id="hero-whatsapp">
-          <img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true"> WhatsApp
+          <img src="./what.png" alt="WhatsApp" style="border-radius:4px" width="20" height="20" aria-hidden="true"> WhatsApp
         </a>
       </div>
 
@@ -111,7 +116,7 @@
           </div>
         </div>
 
-        <div class="note">Minimum bet starts from ₹5. Amounts may vary.</div>
+        <div class="note">Minimum bet starts from 10. Maximum winning amount may vary.</div>
       </div>
 
       <div class="big-cta">
@@ -129,10 +134,10 @@
       <div class="subtitle">Why players trust Sky Matka Group</div>
 
       <div class="features-grid">
-        <div class="feature"><div class="icon">🔒</div><h4>Secure Platform</h4><p>Bank-grade security for transactions.</p></div>
-        <div class="feature"><div class="icon">⚡</div><h4>Instant Results</h4><p>Real-time updates and payouts.</p></div>
-        <div class="feature"><div class="icon">💬</div><h4>24/7 Support</h4><p>Round-the-clock help.</p></div>
-        <div class="feature"><div class="icon">📱</div><h4>Mobile First</h4><p>Optimized for best experience.</p></div>
+        <div class="feature"><div class="icon"><img src="lock.png" alt="Secure Platform" width="70" height="70"></div><h4>Secure Platform</h4><p>Bank-grade security for transactions.</p></div>
+        <div class="feature"><div class="icon"><img src="result.png" alt="instantly reslts" width="70" height="70"></div><h4>Instant Results</h4><p>Real-time updates and payouts.</p></div>
+        <div class="feature"><div class="icon"><img src="chat.png" alt="chatting" width="70" height="70"></div><h4>24/7 Support</h4><p>Round-the-clock help.</p></div>
+        <div class="feature"><div class="icon"><img src="phone.png" alt="Mobile First" width="70" height="70"></div><h4>Mobile First</h4><p>Optimized for best experience.</p></div>
       </div>
     </div>
   </section>
@@ -149,10 +154,13 @@
         <div class="step"><div class="num">3</div><div class="step-title">Start Playing</div><p class="muted">Choose a panel & win instantly.</p></div>
       </div>
 
-      <div class="big-cta">
-        <a class="btn download-btn" data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store">⬇ Download Now</a>
+      <div class="cta-row">
+        
         <a class="btn secondary" href="#contact">📞 Contact Us</a>
-        <a class="btn ghost whatsapp" href="https://wa.me/9376462470"><img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true"> WhatsApp</a>
+
+        <a class="btn download-btn" style="font-size:25px;"  data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store"><img src="images-removebg-preview.png" alt="Download" width="40" height="40">Download Now</a>
+
+        <a class="btn ghost whatsapp" href="https://wa.me/9376462470"><img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true" style="border-radius:4px"> WhatsApp</a>
       </div>
     </div>
   </section>
@@ -164,7 +172,7 @@
       <div class="subtitle">Reach us directly</div>
 
       <div style="max-width:720px;margin:0 auto;text-align:center">
-        <p class="muted">Phone: <a href="tel:9376462470" class="link-phone">9376462470</a></p>
+        <p class="muted">Mobile no: <a href="tel:9376462470" class="link-phone" rel="noopener">Phone</a></p>
         <p class="muted">WhatsApp: <a href="https://wa.me/9376462470" target="_blank" rel="noopener" class="link-whatsapp">Chat on WhatsApp</a></p>
       </div>
     </div>
