--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div>
         <div class="bonus-pill">
-          <div style="font-size:30px; font-style:italic; padding-left: 15px; padding-right: 15px; color:rgb(7, 29, 88)">50 ₹</div>
+          <div style="font-size:27px; font-style:italic; padding-left: 15px; padding-right: 15px; color:rgb(7, 29, 88)">50₹</div>
           <div class="amount">Welcome Bonus</div>
           <div class="muted" style="font-size:14px">On your first deposit</div>
         </div>
@@ -41,7 +41,7 @@
         <!-- download buttons use data attrs and JS will set final href depending on device -->
         
 
-        <a class="btn secondary" href="#contact">📞 Contact Us</a>
+        <a class="btn secondary" href="#contact"><img src="contac.png" alt="contact" width="25" height="25">  Contact Us</a>
 
         <a class="btn download-btn"style="font-size:25px;" data-local="./sky_matka.apk" id="hero-download"><img src="download.png" alt="download" width="40" height="40">        Download App</a>
 
@@ -122,7 +122,7 @@
       <div class="big-cta">
         <!-- these two also become download triggers (Start Playing -> same download behaviour) -->
         <a class="btn download-btn" data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store" id="rates-download">▶ Start Playing Now</a>
-        <a class="btn secondary" href="#contact">📞 Contact Support</a>
+        <a class="btn secondary" href="#contact"><img src="contac.png" alt="contact" width="25" height="25"> Contact Support</a>
       </div>
     </div>
   </section>
@@ -156,11 +156,11 @@
 
       <div class="cta-row">
         
-        <a class="btn secondary" href="#contact">📞 Contact Us</a>
+        <a class="btn secondary" href="#contact"><img src="contac.png" alt="contact" width="20" height="20"> Contact Us</a>
 
         <a class="btn download-btn" style="font-size:25px;"  data-local="./matka.apk" data-remote="https://skymatka.online/redirect-play-store"><img src="images-removebg-preview.png" alt="Download" width="40" height="40">Download Now</a>
 
-        <a class="btn ghost whatsapp" href="https://wa.me/9376462470"><img src="./what.png" alt="WhatsApp" width="20" height="20" aria-hidden="true" style="border-radius:4px"> WhatsApp</a>
+        <a class="btn ghost whatsapp" href="https://wa.me/9376462470"><img src="./what.png" alt="WhatsApp" width="30" height="30" aria-hidden="true" style="border-radius:4px"> WhatsApp</a>
       </div>
     </div>
   </section>
