--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="btn secondary" href="#contact"><img src="public/contac.png" alt="contact" width="25" height="25"> Contact Us</a>
 
         <!-- All downloads point to the same APK inside /public -->
-        <a class="btn download-btn" style="font-size:25px;" data-local="public/sky_matka.apk" id="hero-download">
+        <a class="btn download-btn" style="font-size:25px;" href="https://github.com/AnuragGupta181/matka/releases/download/v1/sky_matka.apk" id="hero-download">
           <img src="public/download.png" alt="download" width="40" height="40"> Download App
         </a>
 
@@ -120,7 +120,7 @@
       </div>
 
       <div class="big-cta">
-        <a class="btn download-btn" data-local="public/sky_matka.apk" id="rates-download">▶ Start Playing Now</a>
+        <a class="btn download-btn" href="https://github.com/AnuragGupta181/matka/releases/download/v1/sky_matka.apk" id="rates-download">▶ Start Playing Now</a>
         <a class="btn secondary" href="#contact"><img src="public/contac.png" alt="contact" width="25" height="25"> Contact Support</a>
       </div>
     </div>
@@ -189,7 +189,7 @@
       <div class="cta-row">
         <a class="btn secondary" href="#contact"><img src="public/contac.png" alt="contact" width="20" height="20"> Contact Us</a>
 
-        <a class="btn download-btn" style="font-size:25px;" data-local="public/sky_matka.apk">
+        <a class="btn download-btn" style="font-size:25px;" href="https://github.com/AnuragGupta181/matka/releases/download/v1/sky_matka.apk">
           <img src="public/images-removebg-preview.png" alt="Download" width="40" height="40"> Download Now
         </a>
 
